<resources>
    <string name="app_name">MatempolisBest</string>
    <string name="contentDescrMenu">Это картинка главного меню</string>
    <string name="contentDescrNext">Далее</string>
    <string name="contentDescrKadr1">На картинке город Матемполис</string>
    <string name="contentDescrKadr3">На картинке задача от Квадрика</string>
    <string name="contentDescrBack">Назад</string>
    <string name="contentDescrKadr2">На картинке Квадрик</string>
    <string name="contentDescrTwo">Ответ два</string>
    <string name="contentDescrThree">Ответ три</string>
    <string name="contentDescrFour">Ответ четыре</string>
    <string name="contentDescrSix">Ответ шесть</string>
    <string name="contentDescrNewGame">Новая игра</string>
    <string name="contentDescrLoadGame">Загрузить игру</string>
    <string name="contentDescrKadr4">Квадрик с картой</string>
    <string name="contentDescrKadr5">На картинке Тетрёна</string>
    <string name="contentDescrKadr6">На картинке задача от Тетрёны</string>
    <string name="contentDescrKadr7">На картинке Тетрёна с картой</string>
    <string name="contentDescrKadr11">На картинке задача от Питуко</string>
    <string name="contentDescrKadr8">На картинке Питуко с сейфом</string>
    <string name="contentDescrKadr9">На картинке Питуко с картой</string>
    <string name="contentDescrKadr10">На картинке друзья у карты</string>
    <string name="contentDescrKadr12">На картинке карта</string>
    <string name="contentDescrKadr14">На картинке друзья идут в путешествие</string>
    <string name="contentDescrKadr15">На картинке друзя у пещеры</string>
    <string name="contentDescrKadr18">На картинке друзья в пещере</string>
    <string name="contentDescrKadr17">На картинке друзья зашли в пещеру</string>
    <string name="contentDescrKadr19">На картинке друзья в зале с книгой</string>
    <string name="contentDescrKadr20">На картинке Антицифр</string>
    <string name="contentDescrKadr21">На картинке Матемполис в беде</string>
    <string name="contentDescr161">Ответ один</string>
    <string name="contentDescr162">Ответ два</string>
    <string name="contentDescr163">Ответ три</string>
    <string name="contentDescrKadr13">На картинке задача для путешествия</string>
    <string name="content132">Ответ пятнадцать</string>
    <string name="content131">Ответ двенадцать</string>
    <string name="content133">Ответ тридцать</string>
    <string name="contentDescrKadr22Good">Поздравляем, Вы выиграли!</string>
    <string name="contentDescrKadr22Bad">Ксожалению, вы проиграли</string>
    <string name="contentDescrKadr16">На картинке задача на пещере</string>
    <string name="contentDescrKadrInfo">На картинке информация о игре</string>
    <string name="textInfo">"Привет, %1$s! \nСкоро ты окажешься в удивительном городе Матемполисе. Ты познакомишься с его жителями и отправишься вместе с ними в приключение. \nСтарайся и решай задачи правильно, потому что от твоих ответов зависит судьба Матемполиса! \nУдачи!</string>
    <string name="contentDescrInfo">Инфо текст</string>
    <string name="textGreeting">Привет-привет!\n Мы рады видеть тебя в этой игре!\n Как тебя зовут?</string>
    <string name="hintNickname">напиши здесь своё имя...</string>
    <string name="contentDescrPoints">Вы набрали очки</string>
    <string name="textPoints">%1$s!\n Ты набрал %2$d баллов из %3$d!\n Неплохой результат!\n Теперь ты можешь пройти игру заново, вдруг концовка будет другой?..  </string>
</resources>
